--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -1,7 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 body {
@@ -10,13 +11,21 @@ body {
 
 nav {
     height: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     background-color: #014257;
 }
 
 .logo-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -33,6 +42,8 @@ nav {
 
 .menu {
     list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-right: 30px;
 }
@@ -43,7 +54,8 @@ nav {
 
 .menu li:hover {
     text-decoration: underline;
-    text-decoration-color: white;
+    -webkit-text-decoration-color: white;
+            text-decoration-color: white;
 }
 
 .menu li:last-child:hover {
@@ -61,6 +73,8 @@ nav {
     padding: 10px 15px;
     border-radius: 7%;
     color: black;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
 }
 
@@ -95,6 +109,8 @@ nav {
     color: black;
     padding: 12px 16px;
     display: block;
+    -webkit-transition: 0.52s;
+    -o-transition: 0.52s;
     transition: 0.52s;
 }
 
@@ -105,7 +121,8 @@ nav {
 .dropdown-content a:hover {
     background-color: #fbfbfb;
     font-weight: bold;
-    box-shadow: inset 0 0 30px #f2e6cf;
+    -webkit-box-shadow: inset 0 0 30px #f2e6cf;
+            box-shadow: inset 0 0 30px #f2e6cf;
 }
 
 .dropdown-content:hover> :first-child {
@@ -173,7 +190,9 @@ nav {
 
     .menuResponsive {
         display: block;
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
 
     .logo-container img {
@@ -196,7 +215,9 @@ nav {
     }
 
     .navigator {
-        justify-content: space-between;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
     }
 
     @media only screen and (max-width: 480px) {
@@ -233,9 +254,16 @@ nav {
 
     @media only screen and (max-width: 365px) {
         .logo-container {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
         }
 
         .logo-container img {
@@ -281,10 +309,19 @@ nav {
 /***** FOOTER *****/ 
 footer {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
@@ -304,8 +341,12 @@ footer {
 }
 .footerSocialNetwork {
     width: 40%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
 }
 
 .footerSocialNetwork a {
@@ -346,7 +387,9 @@ footer {
         width: 90%;
     }
     .footerSocialNetwork {
-        justify-content: space-between;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
     }
     .footerSocialNetwork a {
         width: 40px;
@@ -364,8 +407,13 @@ footer {
     left: 0;
     bottom: 15%;
     margin-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-left: 10px;
     width: 250px;
 }
@@ -377,7 +425,8 @@ footer {
 
 .botonCerrarModal {
     margin-bottom: -11px;
-    align-self: flex-end;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
     width: 40px;
     border-radius: 10px;
     z-index: 0;
@@ -385,12 +434,15 @@ footer {
     opacity: 0;
     display: none;
     visibility: hidden;
+    -webkit-transition: opacity 0.3s ease-in-out;
+    -o-transition: opacity 0.3s ease-in-out;
     transition: opacity 0.3s ease-in-out;
     pointer-events: none;
 }
 
 .botonCerrarModal button {
-    box-shadow: 1px 1px 4px rgb(252, 72, 72);
+    -webkit-box-shadow: 1px 1px 4px rgb(252, 72, 72);
+            box-shadow: 1px 1px 4px rgb(252, 72, 72);
     cursor: pointer;
     border-radius: 10px;
     background-color: rgb(61, 165, 87);
@@ -410,6 +462,8 @@ footer {
     background-image: url("/Media/general/whatsaapModal/patronChat.jpeg");
     opacity: 0;
     visibility: hidden;
+    -webkit-transition: opacity 0.3s ease-in-out;
+    -o-transition: opacity 0.3s ease-in-out;
     transition: opacity 0.3s ease-in-out;
     pointer-events: none;
     z-index: 0;
@@ -460,25 +514,43 @@ svg {
     border-radius: 5px 5px 0 0;
     background-color: #005e54;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 5px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
 }
 
 .chatModalContacto {
     width: 150px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
 }
 
 .chatModalContactoUser {
     padding-top: 3px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-left: 5px;
     text-align: left;
     color: white;
@@ -494,13 +566,24 @@ svg {
 }
 
 .chatModalBotones {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     text-align: center;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
 }
 
 .Llamada {
@@ -511,15 +594,22 @@ svg {
 /* Body chat */
 
 .chatModal section {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding: 10px;
     padding-top: 16px;
     .mensajeCliente {
-        align-self: flex-end;
+        -ms-flex-item-align: end;
+            align-self: flex-end;
     };
     .mensajeCeac {
-        align-self: flex-start;
+        -ms-flex-item-align: start;
+            align-self: flex-start;
     };
 }
 
@@ -548,8 +638,13 @@ svg {
 /*FOOTER*/
 
 .chatModal footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     width: 100%;
     background-color: transparent;
     margin-left: 0px;
@@ -560,9 +655,16 @@ svg {
 .footerMensaje {
     width: 160px;
     min-height: 63px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-radius: 15px;
     margin-top: 10px;
     padding: 5px;
@@ -597,10 +699,19 @@ svg {
     height: 100%;
 }
 .footerEnviarLink {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     text-align: center;
     width: 100%;
     height: 100%;
